--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 *.c.[012]*.*
 *.dt.yaml
 *.dtb
+*.dtbo
 *.dtb.S
 *.dwo
 *.elf
@@ -41,27 +42,28 @@
 *.so.dbg
 *.su
 *.symtypes
+*.symversions
 *.tab.[ch]
 *.tar
 *.xz
 *.zst
 Module.symvers
-modules.builtin
 modules.order
 
 #
 # Top-level generic files
 #
-/tags
-/TAGS
 /linux
+/modules-only.symvers
 /vmlinux
 /vmlinux.32
+/vmlinux.map
 /vmlinux.symvers
 /vmlinux-gdb.py
 /vmlinuz
 /System.map
 /Module.markers
+/modules.builtin
 /modules.builtin.modinfo
 /modules.nsdeps
 
@@ -94,7 +96,6 @@ modules.order
 !.gitattributes
 !.gitignore
 !.mailmap
-!.editorconfig
 
 #
 # Generated include files
@@ -110,6 +111,10 @@ patches-*
 # quilt's files
 patches
 series
+
+# ctags files
+tags
+TAGS
 
 # cscope files
 cscope.*
@@ -156,8 +161,15 @@ x509.genkey
 
 # Documentation toolchain
 sphinx_*/
+# Additions to kernel's .gitignore
 
-# Arch Linux
+# Include clang-tidy config
+!/.clang-tidy
+
+# Sublime Text
+/*.sublime-workspace
+
+# Arch Linux package
+/*.pkg.tar.*
 /pkg/
 /src/
-/*.pkg.tar.*
