Rename to nzxt_rgb_fan_controller

--- a/dkms.conf
+++ b/dkms.conf
@@ -1,9 +1,9 @@
-PACKAGE_NAME="nzxt_grid"
+PACKAGE_NAME="nzxt_rgb_fan_controller"
 PACKAGE_VERSION="0.1"
 AUTOINSTALL="yes"
 
 MAKE[0]="'make' KDIR=$kernel_source_dir modules"
 CLEAN="'make' clean"
 
-BUILT_MODULE_NAME[0]="nzxt_grid"
+BUILT_MODULE_NAME[0]="nzxt_rgb_fan_controller"
 DEST_MODULE_LOCATION[0]="/kernel/drivers/hwmon"
