Add clangd config
Silence drv_unknown_argument errors

--- a/.gitignore
+++ b/.gitignore
@@ -166,6 +166,9 @@ sphinx_*/
 # Include clang-tidy config
 !/.clang-tidy
 
+# Include clangd config
+!/.clangd
+
 # Sublime Text
 /*.sublime-workspace
 
