--- a/ansible/dev-tools.yml
+++ b/ansible/dev-tools.yml
@@ -3,7 +3,7 @@
   become: yes
   tasks:
   - ansible.builtin.dnf:
-      name: [kernel-debug, kernel-debug-devel, lm_sensors, usbutils]
+      name: [kernel-debug, kernel-debug-devel, lm_sensors, usbutils, bc]
       state: latest
   - ansible.builtin.shell: rpm -ql kernel-debug-core | grep /boot/vmlinuz-
     register: kernel_file
