dkms.conf: deduplicate name

--- a/dkms.conf
+++ b/dkms.conf
@@ -5,5 +5,5 @@ AUTOINSTALL="yes"
 MAKE[0]="'make' KDIR=$kernel_source_dir modules"
 CLEAN="'make' clean"
 
-BUILT_MODULE_NAME[0]="nzxt-rgb-fan-controller"
+BUILT_MODULE_NAME[0]="$PACKAGE_NAME"
 DEST_MODULE_LOCATION[0]="/kernel/drivers/hwmon"
