--- a/dkms.conf
+++ b/dkms.conf
@@ -6,4 +6,4 @@ MAKE[0]="'make' KDIR=$kernel_source_dir modules"
 CLEAN="'make' clean"
 
 BUILT_MODULE_NAME[0]="$PACKAGE_NAME"
-DEST_MODULE_LOCATION[0]="/kernel/drivers/hwmon"
+DEST_MODULE_LOCATION[0]="/kernel/drivers/hwmon/misc"
