ansible: upgrade all packages
Otherwise there could be compiler version mismatch between the kernel and the
installed compiler.

--- a/ansible/dev-tools.yml
+++ b/ansible/dev-tools.yml
@@ -3,6 +3,9 @@
   become: yes
   tasks:
   - ansible.builtin.dnf:
+      name: '*'
+      state: latest
+  - ansible.builtin.dnf:
       name: [kernel-debug, kernel-debug-devel, lm_sensors, usbutils, bc]
       state: latest
   - ansible.builtin.shell: rpm -ql kernel-debug-core | grep /boot/vmlinuz-
