--- a/dkms.conf
+++ b/dkms.conf
@@ -2,8 +2,7 @@ PACKAGE_NAME="nzxt-smart2"
 PACKAGE_VERSION="0.1"
 AUTOINSTALL="yes"
 
-MAKE[0]="'make' KDIR=$kernel_source_dir modules"
-CLEAN="'make' clean"
+MAKE[0]="make KDIR=$kernel_source_dir"
 
 BUILT_MODULE_NAME[0]="$PACKAGE_NAME"
 DEST_MODULE_LOCATION[0]="/kernel/drivers/hwmon"
