dkms.conf: mark obsolete for kernel 5.17

--- a/dkms.conf
+++ b/dkms.conf
@@ -6,3 +6,5 @@ MAKE[0]="make KDIR=$kernel_source_dir"
 
 BUILT_MODULE_NAME[0]="$PACKAGE_NAME"
 DEST_MODULE_LOCATION[0]="/kernel/drivers/hwmon"
+
+OBSOLETE_BY=5.17
